top header done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- All css here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
@@ -23,7 +24,46 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        
+
+
+       <header>
+           <div class="header-top-area pl-75 pr-75 align-items-center pt-2 pb-2">
+               <div class="conatainer-fluid">
+                   <div class="row">
+                       <div class="col-xl-3">
+                           <div class="phone">
+                               <ul>
+                                   <li><a href="callto:+(123) 1800-567-8990"><i class="fas fa-phone"></i> <strong>Call :</strong> +(123) 1800-567-8990</a></li>
+                               </ul>
+                           </div>
+                       </div>
+                       <div class="col-xl-4">
+                            <div class="address">
+                                <ul>
+                                    <li><a href="#"><i class="fas fa-map-marker-alt"></i> <strong>Address :</strong> 15 Factory Street, California</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-xl-3">
+                            <div class="email">
+                                <ul>
+                                    <li><a href="mailto:office@example.com"><i class="fas fa-envelope"></i> <strong>Email :</strong> office@example.com</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-xl-2">
+                            <div class="social-media text-right">
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-skype"></i></a>
+                                <a href="#"><i class="far fa-code-branch"></i></a>                               
+                            </div>
+                        </div>
+                   </div>
+               </div>
+           </div>
+       </header>
 
 
             
