--- a/index.html
+++ b/index.html
@@ -63,6 +63,69 @@
                    </div>
                </div>
            </div>
+           <div class="header-main-area pl-75 pr-75 align-items-center">
+                <div class="conatainer-fluid">
+                    <div class="row align-items-center">
+                        <div class="col-xl-3">
+                            <div class="logo">
+                                <a href="index.html"><img src="img/logo/logo.png" alt="Logo"></a>
+                            </div>
+                        </div>
+                        <div class="col-xl-9">
+                            <div class="header-right-button f-right">
+                                <a href="#">Get A Quote</a>
+                            </div>
+                            <div class="header-right-icon f-right">
+                                <ul>
+                                    <li><a href="#"><i class="far fa-globe"></i></a>
+                                        <ul class="lang">
+                                            <li><a href="#">English</a></li>
+                                            <li><a href="#">Bengali</a></li>
+                                            <li><a href="#">Hindi</a></li>
+                                            <li><a href="#">Arabic</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#"><i class="fal fa-search"></i></a>
+                                    <div class="search-form">
+                                        <form action="#">
+                                            <input type="text" placeholder="Search">
+                                            <button><i class="fal fa-search"></i></button>
+                                        </form>
+                                    </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="main-menu f-right">
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Home</a>
+                                            <!-- Sub Menu -->
+                                            <ul class="submenu">
+                                                <li><a href="#">Home 01</a></li>
+                                                <li><a href="#">Home 02</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="#">Home 01</a></li>
+                                                        <li><a href="#">Home 02</a></li>
+                                                        <li><a href="#">Home 03</a></li>
+                                                        <li><a href="#">Home 04</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="#">Home 03</a></li>
+                                                <li><a href="#">Home 04</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="#">About</a></li>
+                                        <li><a href="#">Service</a></li>
+                                        <li><a href="#">Project</a></li>
+                                        <li><a href="#">Blog</a></li>
+                                        <li><a href="#">Contact</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
        </header>
 
 
