slider added static

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <!-- Add your site or application content here -->
         
 
-
+        <!--============================================================
+         01. Header Start
+         =============================================================-->
        <header>
            <div class="header-top-area pl-75 pr-75 align-items-center pt-2 pb-2">
                <div class="conatainer-fluid">
@@ -127,9 +129,41 @@
                 </div>
            </div>
        </header>
+        <!--============================================================
+         01. Header End
+         =============================================================-->
 
-
-            
+        <!--============================================================
+         02. Slider Start
+         =============================================================-->
+         <div class="wrapper-box pl-75 pr-75" style="background-image:url(img/slider/slider.jpg), linear-gradient(to right, rgba(0,0,0,0.75),rgba(0,0,0,0))">
+            <div class="slider-area">
+                <div class="slider-active">
+                    <div class="single-slider slider-height d-flex align-items-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xl-6 d-flex align-items-center">
+                                    <div class="slider-content">
+                                        <h1>We Serve <span>Industrial</span><br>
+                                            Solution for your Business
+                                        </h1>
+                                        <p>We have world famous engineers and material thats enough to serve you the best industrial business solution.</p>
+                                        <div class="slider-button">
+                                            <a href="#">Our Service</a>
+                                            <a href="#">Contact Us</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-6"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+         <!--============================================================
+         02. Slider End
+         =============================================================-->
 
         <!-- All js here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
