about section done in homepage and slider added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
         <!-- All css here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/flaticon.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
@@ -158,11 +160,74 @@
                             </div>
                         </div>
                     </div>
+                    <div class="single-slider slider-height d-flex align-items-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xl-6 d-flex align-items-center">
+                                    <div class="slider-content">
+                                        <h1>We Serve <span>Industrial</span><br>
+                                            Solution for your Business
+                                        </h1>
+                                        <p>We have world famous engineers and material thats enough to serve you the best industrial business solution.</p>
+                                        <div class="slider-button">
+                                            <a href="#">Our Service</a>
+                                            <a href="#">Contact Us</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-6"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
          </div>
          <!--============================================================
          02. Slider End
+         =============================================================-->
+
+         <!--============================================================
+         03. About Start
+         =============================================================-->
+            <div class="about-wrapper pt-100 pb-100">
+                <div class="about-area">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="about-content">
+                                    <div class="ab-image w-img">
+                                        <img src="img/about/about-img.jpg" alt="About-Image" class="img-fluid">
+                                    </div>
+                                    <div class="absp-text absp-text-1">
+                                        <i class="flaticon-windmill"></i>
+                                        <div class="absp-info">
+                                           <h5><span class="counter">2500</span>+</h5>
+                                           <span class="absm-title">Projects Done</span>
+                                        </div>
+                                     </div>
+                                     <div class="absp-text absp-text-2">
+                                        <i class="flaticon-container-1"></i>
+                                        <div class="absp-info">
+                                           <h5><span class="counter">1231</span>+</h5>
+                                           <span class="absm-title">Happy Customer</span>
+                                        </div>
+                                     </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6">
+                                <div class="about-info">
+                                    <span>About Us</span>
+                                    <h3>Trusted Industrial Service Provider</h3>
+                                    <p>Wr are providing service since <span>100 years</span>, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi earum beatae nihil rem illo quasi explicabo quidem, reiciendis voluptas repellat ducimus doloribus optio ad laborum iure! Provident aspernatur rem quibusdam laudantium doloribus sit quos repudiandae veniam</p>
+                                    <a href="#">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         <!--============================================================
+         03. About End
          =============================================================-->
 
         <!-- All js here -->
@@ -171,6 +236,7 @@
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/plugins.js"></script>
+        <script src="js/slick.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
