added projects and counter

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/flaticon.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/magnific-popup.css">
         <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/style.css">
@@ -342,12 +343,176 @@
          <!--============================================================
          Service End
          =============================================================-->
+
+         <!--============================================================
+         05. Project Start
+         =============================================================-->
+        <div class="project-wrapper pt-80 pb-80">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="project-title align-items-center">
+                            <span>Our Project</span>
+                            <h3>Latest Project Work</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="project-menu mb-40 mt-40 text-center">
+                            <button class="active" data-filter="*">show all</button>
+                            <button data-filter=".cat1">AGRICULTURE</button>
+                            <button data-filter=".cat2">MATERIALS</button>
+                            <button data-filter=".cat3">CHEMICAL</button>
+                            <button data-filter=".cat4">MECHANICAL</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row grid">
+                    <div class="col-xl-4 grid-item cat5 cat4">
+                        <div class="project-area mb-30">
+                            <div class="portfolio-thumb">
+                                <img src="img/project/1.jpg" alt="img">
+                            </div>
+                            <div class="portfolio-content">
+                                <div class="icon">
+                                    <a class="pop-img" href="img/project/1.jpg"><i class="fas fa-search"></i></a>
+                                    <a href="#"><i class="fas fa-plus"></i></a>
+                                </div>
+                                <h3>Project Title One</h3>
+                                <span>Building, Office</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 grid-item cat1 cat2">
+                        <div class="project-area mb-30">
+                            <div class="portfolio-thumb">
+                                <img src="img/project/3.jpg" alt="img">
+                            </div>
+                            <div class="portfolio-content">
+                                <div class="icon">
+                                    <a class="pop-img" href="img/project/3.jpg"><i class="fas fa-search"></i></a>
+                                    <a href="#"><i class="fas fa-plus"></i></a>
+                                </div>
+                                <h3>Project Title One</h3>
+                                <span>Building, Office</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 grid-item cat4 cat5">
+                        <div class="project-area mb-30">
+                            <div class="portfolio-thumb">
+                                <img src="img/project/4.jpg" alt="img">
+                            </div>
+                            <div class="portfolio-content">
+                                <div class="icon">
+                                    <a class="pop-img" href="img/project/4.jpg"><i class="fas fa-search"></i></a>
+                                    <a href="#"><i class="fas fa-plus"></i></a>
+                                </div>
+                                <h3>Project Title One</h3>
+                                <span>Building, Office</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 grid-item cat1 cat3">
+                        <div class="project-area mb-30">
+                            <div class="portfolio-thumb">
+                                <img src="img/project/5.jpg" alt="img">
+                            </div>
+                            <div class="portfolio-content">
+                                <div class="icon">
+                                    <a class="pop-img" href="img/project/5.jpg"><i class="fas fa-search"></i></a>
+                                    <a href="#"><i class="fas fa-plus"></i></a>
+                                </div>
+                                <h3>Project Title One</h3>
+                                <span>Building, Office</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 grid-item cat2 cat5">
+                        <div class="project-area mb-30">
+                            <div class="portfolio-thumb">
+                                <img src="img/project/5.jpg" alt="img">
+                            </div>
+                            <div class="portfolio-content">
+                                <div class="icon">
+                                    <a class="pop-img" href="img/project/5.jpg"><i class="fas fa-search"></i></a>
+                                    <a href="#"><i class="fas fa-plus"></i></a>
+                                </div>
+                                <h3>Project Title One</h3>
+                                <span>Building, Office</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12 pt-30 pb-30">
+                        <div class="project-btn text-center">
+                            <a href="#">All Projects</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <!--============================================================
+         05. Project End
+         =============================================================-->
+
+        <!--============================================================
+         06. Counter Start
+        =============================================================-->
+        <div class="counter-area pt-80 pb-80" style="background-image: url(img/counter-bg/bg.jpg), linear-gradient(rgb(0 0 0 / 80%), rgb(0 0 0 / 80%));;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-3">
+                        <div class="counter-content">
+                            <div class="counting">
+                                <h4 class="counter">364</h4>
+                            </div>
+                            <h3>Happy Customers</h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="counter-content">
+                            <div class="counting">
+                                <h4 class="counter">7364</h4>
+                            </div>
+                            <h3>Completed Projects</h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="counter-content">
+                            <div class="counting">
+                                <h4 class="counter">1124</h4>
+                            </div>
+                            <h3>Best Engineers</h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="counter-content">
+                            <div class="counting">
+                                <h4 class="counter">3012</h4>
+                            </div>
+                            <h3>Our Clients</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--============================================================
+         06. Counter End
+         =============================================================-->
         <!-- All js here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="js/vendor/jquery-3.2.1.slim.min.js"></script>
+        <script src="js/vendor/jquery-1.12.4.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/plugins.js"></script>
+        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/jquery.counterup.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
         <script src="js/slick.min.js"></script>
         <script src="js/main.js"></script>
     </body>
