deskop homepage completed

--- a/index.html
+++ b/index.html
@@ -234,109 +234,101 @@
          <!--============================================================
          04. Service Start
          =============================================================-->
-        <div class="service-wrapper pt-80 pb-80" style="background-image: url(img/service/service-bg.jpg), linear-gradient(rgb(0 0 0 / 50%), rgb(0 0 0 / 15%));">
+        <div class="service-wrapper pt-80 pb-80" style="background: #f9f9f9 none repeat scroll 0 0;">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
-                        <div class="service-top align-items-center">
-                            <div class="service-title f-left">
-                                <span>Our Service</span>
-                                <h3>What we offer</h3>
+                        <div class="service-title mb-30">
+                            <span>Our Service</span>
+                            <h3>What we offer</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-4">
+                        <div class="service-box">
+                            <div class="service-icon">
+                                <img src="img/service/1.png" alt="service-icon">
                             </div>
-                            <div class="service-top-right f-right pt-30">
-                                <a href="javascript:void(0)"><i class="fas fa-angle-left"></i></a>
-                                <a href="javascript:void(0)"><i class="fas fa-angle-right"></i></a>
+                            <div class="service-content">
+                                <h4><a href="#">All Maintenance</a></h4>
+                                <p>Stop loss and take profit orders will help secure your investment. The system will automatically execute trades</p>
+                            </div>
+                            <div class="service-readmore">
+                                <a href="#"><i class="far fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="service-slides">
-                        <!-- Service item one -->
-                        <div class="col-xl-4">
-                            <div class="service-inner">
-                                <div class="service-item pt-20">
-                                    <a href="#">
-                                        <div class="service-img">
-                                            <img src="img/service/1.jpg" alt="service-1" class="img-fluid">
-                                        </div>
-                                        <div class="service-content align-items-center">
-                                            <div class="service-text f-left p-2">
-                                                <h4>Power & Energy</h4>
-                                                <p>Energy Service</p>
-                                            </div>
-                                            <div class="service-icon f-right align-items-center">
-                                                <i class="flaticon-right-arrow"></i>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
+                    <div class="col-xl-4">
+                        <div class="service-box">
+                            <div class="service-icon">
+                                <img src="img/service/2.png" alt="service-icon">
                             </div>
-                        </div>
-                        <!-- Service item one -->
-                        <div class="col-xl-4">
-                            <div class="service-inner">
-                                <div class="service-item pt-20">
-                                    <a href="#">
-                                        <div class="service-img">
-                                            <img src="img/service/1.jpg" alt="service-1" class="img-fluid">
-                                        </div>
-                                        <div class="service-content align-items-center">
-                                            <div class="service-text f-left p-2">
-                                                <h4>Power & Energy</h4>
-                                                <p>Energy Service</p>
-                                            </div>
-                                            <div class="service-icon f-right align-items-center">
-                                                <i class="flaticon-right-arrow"></i>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
+                            <div class="service-content">
+                                <h4><a href="#">Automobiles</a></h4>
+                                <p>Stop loss and take profit orders will help secure your investment. The system will automatically execute trades</p>
                             </div>
-                        </div>
-                        <!-- Service item one -->
-                        <div class="col-xl-4">
-                            <div class="service-inner">
-                                <div class="service-item pt-20">
-                                    <a href="#">
-                                        <div class="service-img">
-                                            <img src="img/service/1.jpg" alt="service-1" class="img-fluid">
-                                        </div>
-                                        <div class="service-content align-items-center">
-                                            <div class="service-text f-left p-2">
-                                                <h4>Power & Energy</h4>
-                                                <p>Energy Service</p>
-                                            </div>
-                                            <div class="service-icon f-right align-items-center">
-                                                <i class="flaticon-right-arrow"></i>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Service item one -->
-                        <div class="col-xl-4">
-                            <div class="service-inner">
-                                <div class="service-item pt-20">
-                                    <a href="#">
-                                        <div class="service-img">
-                                            <img src="img/service/1.jpg" alt="service-1" class="img-fluid">
-                                        </div>
-                                        <div class="service-content align-items-center">
-                                            <div class="service-text f-left p-2">
-                                                <h4>Power & Energy</h4>
-                                                <p>Energy Service</p>
-                                            </div>
-                                            <div class="service-icon f-right align-items-center">
-                                                <i class="flaticon-right-arrow"></i>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
+                            <div class="service-readmore">
+                                <a href="#"><i class="far fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    
-                    
+                    <div class="col-xl-4">
+                        <div class="service-box">
+                            <div class="service-icon">
+                                <img src="img/service/3.png" alt="service-icon">
+                            </div>
+                            <div class="service-content">
+                                <h4><a href="#">Mechanical Parts</a></h4>
+                                <p>Stop loss and take profit orders will help secure your investment. The system will automatically execute trades</p>
+                            </div>
+                            <div class="service-readmore">
+                                <a href="#"><i class="far fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="service-box">
+                            <div class="service-icon">
+                                <img src="img/service/4.png" alt="service-icon">
+                            </div>
+                            <div class="service-content">
+                                <h4><a href="#">All Maintenance</a></h4>
+                                <p>Stop loss and take profit orders will help secure your investment. The system will automatically execute trades</p>
+                            </div>
+                            <div class="service-readmore">
+                                <a href="#"><i class="far fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="service-box">
+                            <div class="service-icon">
+                                <img src="img/service/5.png" alt="service-icon">
+                            </div>
+                            <div class="service-content">
+                                <h4><a href="#">Petroleum</a></h4>
+                                <p>Stop loss and take profit orders will help secure your investment. The system will automatically execute trades</p>
+                            </div>
+                            <div class="service-readmore">
+                                <a href="#"><i class="far fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="service-box">
+                            <div class="service-icon">
+                                <img src="img/service/6.png" alt="service-icon">
+                            </div>
+                            <div class="service-content">
+                                <h4><a href="#">24x7 Support</a></h4>
+                                <p>Stop loss and take profit orders will help secure your investment. The system will automatically execute trades</p>
+                            </div>
+                            <div class="service-readmore">
+                                <a href="#"><i class="far fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -663,7 +655,66 @@
         =============================================================-->
 
         <!--============================================================
-         09. Footer Start
+         09. Contact Area Start
+        =============================================================-->
+        <div class="contact-wrapper pt-80 pb-80">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-title mb-30">
+                        <span>ESTIMATION</span>
+                        <h3>Request for a Free Quote</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-8 pl-0">
+                        <div class="form-area">
+                            <form action="#">
+                                <div class="row">
+                                    <div class="col-xl-6">
+                                        <div class="form-group mb-4">
+                                            <input type="text" name="name" placeholder="Enter your name" class="form-control shadow-none">
+                                        </div>
+                                        <div class="form-group mb-4">
+                                            <input type="email" name="email" placeholder="Enter your email" class="form-control">
+                                        </div>
+                                        <div class="form-group mb-4">
+                                            <select name="service-select" id="service-select" class="form-control">
+                                                <option value="0">Please Select Service</option>
+                                                <option value="1">About Company</option>
+                                                <option value="2">Help Line</option>
+                                                <option value="3">Get Qoute</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-6">
+                                        <div class="form-group mb-4">
+                                            <textarea name="messsage" id="message" cols="5" rows="4" class="form-control"></textarea>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-default btn-block">Submit</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="subscribers-box">
+                            <img src="img/subscriber.png" alt="subsriber">
+                            <h4>Subscribe Our Newsletter</h4>
+                            <p>Subscribe us & get updates in inbox</p>
+                            <a href="#">Enter Email</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--============================================================
+         09. Contact Area Start
+        =============================================================-->
+
+        <!--============================================================
+         10. Footer Start
         =============================================================-->
         <footer>
             <div class="footer-wrapper pt-80 pb-20" style="background: #313131">
@@ -739,7 +790,7 @@
             </div>
         </footer>
         <!--============================================================
-         09. Footer End
+         10. Footer End
         =============================================================-->
 
         <!-- All js here -->
